--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,12 +13,16 @@
 
   <!-- include source files here... -->
   <script src="src/Plane.js"></script>
-  
+  <script src="src/Airport.js"></script>
 
   
+
+
   <!-- include spec files here... -->
   <script src="spec/FeatureSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
+  <script src="spec/AirportSpec.js"></script>
+
 
 
 </head>
